# app/backend/docs/swagger.json
@@ -26,6 +26,40 @@
                 }
             }
         },
+        "/api/v1/deleteuser": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "delete user",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "DeleteUser",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/handshake": {
             "post": {
                 "security": [
@@ -419,8 +453,11 @@
     "definitions": {
         "types.HandshakePayload": {
             "type": "object",
+            "required": [
+                "targetUserId"
+            ],
             "properties": {
-                "user_id": {
+                "targetUserId": {
                     "type": "integer"
                 }
             }
